<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="game_title">GRČKI KINO (20/80)</string>
    <string name="draw_time">Vreme izvlačenja</string>
    <string name="time_to_pay">Preostalo za uplatu</string>
    <string name="something_went_wrong">Nešto nije u redu!</string>
    <string name="try_again">Pokušajte opet</string>
    <string name="ok">OK</string>
    <string name="draw_time_with_time">Vreme izvlačenja: %s</string>
    <string name="round_with_round_id">Kolo: %s</string>
    <string name="sum_of_picked_numbers">Izabrano brojeva: %d</string>
    <string name="bk">B.K</string>
    <string name="odd">Kvota</string>
    <string name="random_pick">Slučajni odabir</string>
    <string name="time_to_pay_with_time">Izvlačenje počinje za: %s</string>
    <string name="results">Rezultati</string>
</resources>